# CFGBeast

./: CFGBeast.ps1  Cargo.toml  README.md  build.cmd  build.rs
src/: cfg.rs  config.rs  cvar.rs  driver.rs  gui.rs  init.rs  main.rs  motd.rs  utils.rs
src/gui/: events.rs  mod.rs  window.rs
