[package]
name = "CFGBeast"
version = "2.1.0"
edition = "2024"

[dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5" # Optional, for macro-based UI
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"

[build-dependencies]
winresource = "0.1.28"
